--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <body>
     <h1>Xin chào thế giới!</h1>
   <button onclick="alert('Xin chào')">
+  <script>
+    alert("Warning!");
+  </script>
+
 </body>
 </html>
