--- a/index.html
+++ b/index.html
@@ -1,56 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+ <!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Docker Compose Generator</title>
+    <title>Xử lý dữ liệu nhập từ form</title>
 </head>
 <body>
-  <form action="/" method="post">
-    <div class="form-group">
-      <label for="image">Docker image</label>
-      <input type="text" class="form-control" id="image" name="image">
-    </div>
-    <div class="form-group">
-      <label for="volumes">Volumes</label>
-      <input type="text" class="form-control" id="volumes" name="volumes">
-    </div>
-    <div class="form-group">
-      <label for="ports">Ports</label>
-      <input type="text" class="form-control" id="ports" name="ports">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    <h2>Nhập dữ liệu</h2>
+    <form id="myForm">
+        <label for="inputData">Nhập dữ liệu:</label><br>
+        <input type="text" id="inputData" name="inputData"><br>
+        <input type="button" value="Xác nhận" onclick="displayData()">
+    </form>
+    <p id="result"></p>
+
+    <script>
+        function displayData() {
+            var input = document.getElementById("inputData").value;
+            document.getElementById("result").innerHTML = "Bạn đã nhập: " + input;
+        }
+    </script>
 </body>
 </html>
-
-
-<script lang="JavaScript">
-const form = document.querySelector("form");
-const imageInput = document.querySelector("#image");
-const volumesInput = document.querySelector("#volumes");
-const portsInput = document.querySelector("#ports");
-
-form.addEventListener("submit", (e) => {
-  e.preventDefault();
-
-  const image = imageInput.value;
-  const volumes = volumesInput.value.split("\n");
-  const ports = portsInput.value.split(",");
-
-  const compose = {
-    version: "3.8",
-    services: [
-      {
-        name: "my-service",
-        image: image,
-        volumes: volumes,
-        ports: ports,
-      },
-    ],
-  };
-
-  const output = JSON.stringify(compose, null, 2);
-
-  console.log(output);
-});
-</script>
